# uf-ulog

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  release-plz.toml
.github/workflows/: CI.yml  release-plz.yml  sec.yml
examples/embassy-tasks-file/: Cargo.toml
examples/embassy-tasks-file/src/: main.rs
examples/simple-file/: Cargo.toml  read_ulg.py
examples/simple-file/src/: main.rs
uf_ulog/: CHANGELOG.md  Cargo.toml  README.md
uf_ulog/examples/: embassy.rs  minimal.rs  simple.rs  simple_async.rs  simple_tuned.rs
uf_ulog/src/: cfg.rs  data.rs  export.rs  exporter.rs  exporter_async.rs  lib.rs  producer.rs  registry.rs  types.rs  ulog.rs  wire.rs  writer.rs  writer_async.rs  writer_common.rs
uf_ulog/src/adapters/: embassy.rs  heapless.rs  mod.rs  std.rs
uf_ulog_macro/: CHANGELOG.md  Cargo.toml  README.md
uf_ulog_macro/src/: lib.rs
uf_ulog_macro/tests/: runtime_encode.rs  trybuild.rs
uf_ulog_macro/tests/ui/: fail_bad_name_attr.rs  fail_bad_name_attr.stderr  fail_bad_timestamp_type.rs  fail_bad_timestamp_type.stderr  fail_generics.rs  fail_generics.stderr  fail_missing_timestamp.rs  fail_missing_timestamp.stderr  fail_registry_generics.rs  fail_registry_generics.stderr  fail_registry_non_enum.rs  fail_registry_non_enum.stderr  fail_registry_non_unit_variant.rs  fail_registry_non_unit_variant.stderr  fail_unknown_ulog_attr_key.rs  fail_unknown_ulog_attr_key.stderr  fail_unsupported_char.rs  fail_unsupported_char.stderr  fail_unsupported_type.rs  fail_unsupported_type.stderr  pass_array.rs  pass_basic.rs  pass_registry.rs
