[package]
name = "uf_ulog"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = true


[dependencies]
embedded-io = "0.6"
heapless = "0.9.2"
uf_ulog_macro = { path = "../uf_ulog_macro", optional = true }

[features]
default = ["derive"]
derive = ["dep:uf_ulog_macro"]
std = []
