[package]
name = "uf_ulog"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = true
description = "Allocator-free no_std ULog serializer for embedded systems"
readme = "../README.md"
license-file = "../LICENSE"
documentation = "https://docs.rs/uf_ulog"
keywords = ["ulog", "px4", "embedded", "logging", "no-std"]
categories = ["embedded", "no-std", "encoding"]
include = [
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/src/**",
  "/tests/**",
  "/examples/**/*.rs",
]


[dependencies]
embedded-io = "0.6"
embedded-io-async = { version = "0.6", optional = true }
heapless = "0.9.2"
uf_ulog_macro = { version = "0.1.0", path = "../uf_ulog_macro", optional = true }

[features]
default = ["derive"]
derive = ["dep:uf_ulog_macro"]
async = ["dep:embedded-io-async"]

[dev-dependencies]
futures = "0.3"

[[example]]
name = "simple"

[[example]]
name = "simple_tuned"

[[example]]
name = "simple_async"
required-features = ["async"]

[[example]]
name = "minimal"
