[package]
publish = true
name = "uf_ulog_macro"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Derive macros for uf_ulog message and registry metadata"
readme = "README.md"
documentation = "https://docs.rs/uf_ulog_macro"
keywords = ["ulog", "px4", "derive", "proc-macro", "embedded"]
categories = [
  "embedded",
  "encoding",
  "development-tools::procedural-macro-helpers",
]
include = [
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/src/**",
  "/tests/**",
  "/examples/**/*.rs",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = "2.0.115"

[dev-dependencies]
trybuild = "1.0.114"
uf_ulog = { path = "../uf_ulog" }
